--- a/styless.css
+++ b/styless.css
@@ -18,6 +18,7 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 20px 0;
+    position: sticky;
 }
 .icon-cart{
     position: relative;
